# Grid-1

./: Makefile.am  configure.ac
Grid/qcd/smearing/: StoutSmearing.h
